# hack26

./: .gitignore  README.md  Sentinal.md  check.sh  data  extrach.sh  hack26.code-workspace  pyproject.toml
.cursor/plans/: tft_crop_yield_pipeline_e1979c12.plan.md
.obsidian/: app.json  appearance.json  community-plugins.json  copilot-index-98ef008efc7bd3332a6c92fe1044bee2.json  core-plugins.json  graph.json  hotkeys.json  workspace.json  workspaces.json
.obsidian/plugins/omnisearch/: data.json
.obsidian/snippets/: center_images.css  note_accent.css
context/: onboarding.md
documentation/: problem statement.md
lightning_logs/version_0/: events.out.tfevents.1777157021.default.92273.0  hparams.yaml
lightning_logs/version_1/: events.out.tfevents.1777157200.default.93044.0  hparams.yaml
lightning_logs/version_2/: events.out.tfevents.1777157228.default.93044.1  hparams.yaml
lightning_logs/version_3/: events.out.tfevents.1777157258.default.93044.2  hparams.yaml
lightning_logs/version_4/: events.out.tfevents.1777157293.default.93044.3  hparams.yaml
progress/: mini-iowa.md
software/: SPEC.md
software/engine/: __init__.py  cdl.py  counties.py  dataset.py  forecast.py  model.py
software/engine/nass/: core.py
software/engine/weather/: core.py  power.py  sentinel.py
software/tests/: test_cdl_smoke.py  test_counties_smoke.py  test_dataset_smoke.py
